<resources>
    <string name="agree">Agree</string>
    <string name="disagree">Disgree</string>
    <string name="app_name">啥都有</string>
    <string name="monday">周一</string>
    <string name="thuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_category">全部分类</string>
    <string name="main_tab_online_service">在线客服</string>
    <string name="main_tab_purchasing_order">采购单</string>
    <string name="main_tab_mine_fs">我的方盛</string>
    <string name="webview_js_javainterface">YunYou</string>
    <string name="location_default">位置</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="tip_hasShopCustomer_address">商店分销客户无法切换城市</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <!--我的方盛-->
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="examine">待审批</string>
    <string name="order_wait_pay">待付款</string>
    <string name="order_wait_send">待发货</string>
    <string name="order_wait_receive">待收货</string>
    <string name="order_sale_back">退货/维修</string>
    <string name="personal_coupon">优惠券</string>
    <string name="place_choices_goods">请选择结算物品后，再结算</string>
    <string name="action_reset">Reset</string>
    <!-- 定位 -->
    <string name="title_location">区域选择</string>
    <string name="hint_search_addr">请输入配送地址</string>
    <string name="subtitle_current_addr">当前定位城市</string>
    <string name="subtitle_select_addr">选择配送位置</string>
    <string name="hint_location">正在定位中</string>
    <string name="location_search_history">历史选择</string>
    <string name="location_fail">定位失败</string>
    <string name="no_search_any_result">不好意思，暂时没有找到“相关”城市～</string>

    <string name="tab_me">我的</string>
    <string name="tab_news">新闻</string>
    <string name="tab_hangqing">行情</string>
    <string name="tab_stock_selected">自选</string>
    <string name="tab_stock_god">股神</string>
    <string name="tab_me_login">登录 | 注册</string>
    <string name="item_setting">设置</string>
</resources>
