<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/header_attendview"/>

    <com.example.administrator.kotlintest.dateyearmonthday.DatePanelView
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/content_bg"
        app:position="top">

        <Button
            android:id="@+id/panelHandle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:background="@drawable/sliding_drawer_handle_bottom"/>

        <RelativeLayout
            android:id="@+id/panelContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/main_year_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:drawablePadding="7dp"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/week"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sunday"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/monday"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/thuesday"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wednesday"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/thursday"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/friday"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/saturday"
                    android:gravity="center"
                    android:layout_weight="1"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/week">
                <com.example.administrator.kotlintest.dateyearmonthday.MyViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scrollbars="none">
                </com.example.administrator.kotlintest.dateyearmonthday.MyViewPager>
                <TextView
                    android:id="@+id/main_frame_shader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ddffffff"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:textSize="30dp"/>
            </FrameLayout>
        </RelativeLayout>
    </com.example.administrator.kotlintest.dateyearmonthday.DatePanelView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/attendinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerHorizontal="true" />
    </LinearLayout>


</LinearLayout>
