<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <LinearLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_e0ffffff"
        android:baselineAligned="false"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_cccccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/tab_news"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/tab_news_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="3dp"
                        android:src="@drawable/tab_news_selector" />

                    <com.flyco.tablayout.widget.MsgView xmlns:mv="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/tab_news_tips"
                        android:layout_width="9dp"
                        android:layout_height="9dp"
                        android:layout_alignTop="@id/tab_news_iv"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginStart="-4dp"
                        android:layout_marginTop="1dp"
                        android:layout_toEndOf="@id/tab_news_iv"
                        android:layout_toRightOf="@id/tab_news_iv"
                        android:gravity="center"
                        android:textColor="#ffffff"
                        android:textSize="8dp"
                        android:visibility="gone"
                        mv:mv_backgroundColor="@color/color_ee504f"
                        mv:mv_isRadiusHalfHeight="true" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/tab_text_top_padding"
                    android:text="@string/tab_news"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/tab_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_stock_selected"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/px6_to_dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tab_stock_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/tab_text_top_padding"
                    android:text="@string/tab_stock_selected"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/tab_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_hangqing"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/px6_to_dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tab_hangqing_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/tab_text_top_padding"
                    android:text="@string/tab_hangqing"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/tab_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_stock_god"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/px6_to_dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tab_stock_god_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/tab_text_top_padding"
                    android:text="@string/tab_stock_god"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/tab_text_size" />
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/tab_me"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/tab_my"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/px6_to_dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/tab_me_selector" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/tab_text_top_padding"
                        android:text="@string/tab_me"
                        android:textColor="@color/tab_text_color"
                        android:textSize="@dimen/tab_text_size" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_red_dot"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginStart="-5dp"
                    android:layout_marginTop="@dimen/px6_to_dp"
                    android:layout_toEndOf="@+id/tab_my"
                    android:layout_toRightOf="@+id/tab_my"
                    android:gravity="center"
                    android:textColor="@color/color_f5f5f5"
                    android:textSize="9dp"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/tab_content_llt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tab_bar"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/no_login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tab_bar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:visibility="gone"/>

</RelativeLayout>